update LeetCode Biweekly Contest 173

--- a/algorithm/LeetCode/[Easy] 1929. Concatenation of Array.md
+++ b/algorithm/LeetCode/[Easy] 1929. Concatenation of Array.md
@@ -44,3 +44,21 @@ class Solution:
     def getConcatenation(self, nums: List[int]) -> List[int]:
         return nums*2
 ```
+
+**Solution 2: (Array)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 16.85 MB, Beats 59.23%
+```
+```c++
+class Solution {
+public:
+    vector<int> getConcatenation(vector<int>& nums) {
+        vector<int> ans = nums;
+        for (auto &num: nums) {
+            ans.push_back(num);
+        }
+        return ans;
+    }
+};
+```
