--- a/algorithm/LeetCode/[Easy] 2235. Add Two Integers.md
+++ b/algorithm/LeetCode/[Easy] 2235. Add Two Integers.md
@@ -33,3 +33,17 @@ class Solution:
     def sum(self, num1: int, num2: int) -> int:
         return num1+num2
 ```
+
+**Solution 2: (Math)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 7.95 MB, Beats 68.41%
+```
+```c++
+class Solution {
+public:
+    int sum(int num1, int num2) {
+        return num1 + num2;
+    }
+};
+```
