--- a/algorithm/LeetCode/[Hard] 1044. Longest Duplicate Substring.md
+++ b/algorithm/LeetCode/[Hard] 1044. Longest Duplicate Substring.md
@@ -97,3 +97,59 @@ class Solution:
 
         return Found
 ```
+
+**Solution 2: (Binary Search, Rabin-Karp Algorithm, upper bound)**
+```
+Runtime: 1187 ms, Beats 55.76%
+Memory: 430.53 MB, Beats 33.74%
+```
+```c++
+class Solution {
+    int MOD = 1e9 + 7;
+    pair<bool, string> check(int mid, string &s, vector<int> &power) {
+        int n = s.size(), i;
+        unordered_map<int, vector<int>> mp;
+        long long h = 0;
+        string cs, ns;
+        for (i = 0; i < mid ; i ++) {
+            h = (h * 26 + s[i] - 'a') % MOD;
+        }
+        mp[h].push_back(0);
+        for (i = mid; i < n; i ++) {
+            h = (((h * 26 - 1LL * (s[i - mid] - 'a') * power[mid]) % MOD + MOD) % MOD + s[i] - 'a') % MOD;
+            if (mp.count(h)) {
+                cs = s.substr(i - mid + 1, mid);
+                for (auto j: mp[h]) {
+                    ns = s.substr(j, mid);
+                    if (ns == cs) {
+                        return {true, cs};
+                    }
+                }
+            }
+            mp[h].push_back(i - mid + 1);
+        }
+        return {false, ""};
+    }
+public:
+    string longestDupSubstring(string s) {
+        int i, n = s.length(), left = 1, right = n - 1, mid;
+        string ans = "";
+        vector<int> power(n + 1);
+        power[0] = 1;
+        for (i = 1; i <= n; i ++) {
+            power[i] = (1LL * power[i - 1] * 26) % MOD;
+        }
+        while (left <= right) {
+            mid = left + (right - left) / 2;
+            auto [possible, cs] = check(mid, s, power);
+            if (!possible) {
+                right = mid - 1;
+            } else {
+                ans = cs;
+                left = mid + 1;
+            }
+        }
+        return ans;
+    }
+};
+```
