--- a/algorithm/LeetCode/[Hard] 1411. Number of Ways to Paint N × 3 Grid.md
+++ b/algorithm/LeetCode/[Hard] 1411. Number of Ways to Paint N × 3 Grid.md
@@ -105,3 +105,115 @@ class Solution:
         
         return (dp(n, True) + dp(n, False)) % MOD
 ```
+
+**Solution 3: (DP Bottom-Up. Bit Manipulation, level by level)**
+
+    R G B
+    0 1 2
+
+22 = 18 + 3 + 1
+      2   1   1
+      r   m   l
+
+```
+Runtime: 35 ms, Beats 33.00%
+Memory: 7.89 MB, Beats 70.00%
+```
+```c++
+class Solution {
+public:
+    int numOfWays(int n) {
+        int i, a, b, left, mid, right, p_left, p_mid, p_right, MOD = 1e9 + 7;
+        vector<long long> pre(27), dp(27);
+        for (a = 1; a < 27; a ++) {
+            left = a % 3;
+            mid = (a / 3) % 3;
+            right = a / 9;
+            if (left == mid || right == mid) {
+                continue;
+            }
+            pre[a] = 1;
+        }
+        for (i = 1; i < n; i ++) {
+            for (a = 0; a < 27; a ++) {
+                right = a % 3;
+                mid = (a / 3) % 3;
+                left = a / 9;
+                if (left == mid || mid == right) {
+                    continue;
+                }
+                for (b = 0; b < 27; b ++) {
+                    p_right = b % 3;
+                    p_mid = (b / 3) % 3;
+                    p_left = b / 9;
+                    if (left == p_left || mid == p_mid || right == p_right) {
+                        continue;
+                    }
+                    dp[a] = (dp[a] + pre[b]) % MOD;
+                }
+            }
+            swap(pre, dp);
+            fill(dp.begin(), dp.end(), 0);
+        }
+        long long ans = 0;
+        for (i = 0; i < 27; i ++) {
+            ans = (ans + pre[i]) % MOD;
+        }
+        return ans;
+    }
+};
+````
+
+**Solution 4: (DP Bottom-Up, level by level, summarize pattern)**
+
+__Intuition__
+Classic dynamic programming problem.
+
+
+__Explanation__
+Two pattern for each row, 121 and 123.
+121, the first color same as the third in a row.
+123, one row has three different colors.
+
+We consider the state of the first row,
+pattern 121: 121, 131, 212, 232, 313, 323.
+pattern 123: 123, 132, 213, 231, 312, 321.
+So we initialize a121 = 6, a123 = 6.
+
+We consider the next possible for each pattern:
+Patter 121 can be followed by: 212, 213, 232, 312, 313
+Patter 123 can be followed by: 212, 231, 312, 232
+
+121 => three 121, two 123
+123 => two 121, two 123
+
+So we can write this dynamic programming transform equation:
+b121 = a121 * 3 + a123 * 2
+b123 = a121 * 2 + a123 * 2
+
+We calculate the result iteratively
+and finally return the sum of both pattern a121 + a123
+
+
+__Complexity__
+Time O(N), Space O(1)
+
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 7.86 MB, Beats 70.00%
+```
+```c++
+class Solution {
+public:
+    int numOfWays(int n) {
+        long a121 = 6, a123 = 6, b121, b123, mod = 1e9 + 7;
+        for (int i = 1; i < n; ++i) {
+            b121 = a121 * 3 + a123 * 2;
+            b123 = a121 * 2 + a123 * 2;
+            a121 = b121 % mod;
+            a123 = b123 % mod;
+        }
+        return (a121 + a123) % mod;
+    }
+};
+```
