--- a/algorithm/LeetCode/[Hard] 1970. Last Day Where You Can Still Cross.md
+++ b/algorithm/LeetCode/[Hard] 1970. Last Day Where You Can Still Cross.md
@@ -196,38 +196,39 @@ public:
 
 **Solution 4: (BFS, Binary Search, upper bound)**
 ```
-Runtime: 408 ms, Beats 23.89%
-Memory: 262.10 MB, Beats 30.37%
+Runtime: 95 ms, Beats 75.92%
+Memory: 125.10 MB, Beats 76.96%
 ```
 ```c++
 class Solution {
     int dd[5] = {0, 1, 0, -1, 0};
     bool check(int mid, int row, int col, vector<vector<int>> &cells) {
-        int i, d, nr, nc;
-        vector<vector<int>> dp(row, vector<int>(col));
-        vector<vector<bool>> visited(row, vector<bool>(col));
+        int i, r, c;
+        vector<bool> visited(row * col);
         for (i = 0; i < mid; i ++) {
-            dp[cells[i][0] - 1][cells[i][1] - 1] = 1;
+            r = cells[i][0] - 1;
+            c = cells[i][1] - 1;
+            visited[r * col + c] = true;
         }
         queue<array<int, 2>> q;
-        for (i = 0; i < col; i ++) {
-            if (dp[0][i] == 0) {
-                q.push({0, i});
-                visited[0][i] = true;
+        for (c = 0; c < col; c ++) {
+            if (!visited[c]) {
+                q.push({0, c});
+                visited[c] = true;
             }
         }
         while (q.size()) {
-            auto [r, c] = q.front();
+            auto [cr, cc] = q.front();
             q.pop();
-            if (r == row - 1) {
+            if (cr == row - 1) {
                 return true;
             }
-            for (d = 0; d < 4; d ++) {
-                nr = r + dd[d];
-                nc = c + dd[d + 1];
-                if (0 <= nr && nr < row && 0 <= nc && nc < col && dp[nr][nc] == 0 && !visited[nr][nc]) {
-                    q.push({nr, nc});
-                    visited[nr][nc] = true;
+            for (i = 0; i < 4; i ++) {
+                r = cr + dd[i];
+                c = cc + dd[i + 1];
+                if (0 <= r && r < row && 0 <= c && c < col && !visited[r * col + c]) {
+                    q.push({r, c});
+                    visited[r * col + c] = true;
                 }
             }
         }
@@ -235,7 +236,7 @@ class Solution {
     }
 public:
     int latestDayToCross(int row, int col, vector<vector<int>>& cells) {
-        int left = 0, right = row * col, mid, ans;
+        int left = 1, right = cells.size(), mid, ans = 0;
         while (left <= right) {
             mid = left + (right - left) / 2;
             if (!check(mid, row, col, cells)) {
