--- a/algorithm/LeetCode/[Hard] 3562. Maximum Profit from Trading Stocks with Discounts.md
+++ b/algorithm/LeetCode/[Hard] 3562. Maximum Profit from Trading Stocks with Discounts.md
@@ -184,10 +184,14 @@ dp(u,state,b):
 * state = 0: the maximum profit of the subtree rooted at u with budget b when the discount is not available (that is, when the parent node is not purchased).
 * state = 1: the maximum profit of the subtree rooted at u with budget b when the discount is available (the parent node must be purchased).
 
-* If state = 0, discounts are not available. The profit is
-subProfit(1, b − present_u) + future_u − present_u
-* If state = 1, discounts are available. The profit is
-subProfit(1, b − ⌊present_u / 2⌋) + future_u − ⌊present_u / 2⌋
+* Do not purchase node u
+subProfit(0,b)
+
+* Purchase node u
+    * If state = 0, discounts are not available. The profit is
+    subProfit(1, b − present_u) + future_u − present_u
+    * If state = 1, discounts are available. The profit is
+    subProfit(1, b − ⌊present_u / 2⌋) + future_u − ⌊present_u / 2⌋
 
     present = [4,6,8], future = [7,9,11], hierarchy = [[1,2],[1,3]], budget = 10
 
@@ -286,6 +290,70 @@ public:
         };
 
         return std::get<0>(dfs(dfs, 0))[budget];
+    }
+};
+```
+
+**Solution 3: (Tree Dynamic Programming, DP Bottom-Up, taken not-taken, O(n * budget^2))**
+```
+Runtime: 297 ms, Beats 73.71%
+Memory: 105.08 MB, Beats 75.33%
+```
+```c++
+class Solution {
+    tuple<vector<int>, vector<int>, int> dfs(int u, int budget, vector<vector<int>> &g, vector<int> &present, vector<int> &future) {
+        int cost = present[u];
+        int dCost = present[u] / 2;  // discounted cost
+
+        // dp[u][state][budget]
+        // state = 0: Do not purchase parent node, state = 1: Must purchase
+        // parent node
+        auto dp0 = vector<int>(budget + 1);
+        auto dp1 = vector<int>(budget + 1);
+
+        // subProfit[state][budget]
+        // state = 0: discount not available, state = 1: discount available
+        auto subProfit0 = vector<int>(budget + 1);
+        auto subProfit1 = vector<int>(budget + 1);
+
+        int uPrice = cost;
+
+        for (auto v: g[u]) {
+            auto &&[subDp0, subDp1, vPrice] = dfs(v, budget, g, present, future);
+            uPrice += vPrice;
+            for (int b = budget; b >= 0; b--) {
+                for (int price = 0; price <= min(vPrice, b); price += 1) {
+                    subProfit0[b] = max(subProfit0[b],
+                                        subProfit0[b - price] + subDp0[price]);
+                    subProfit1[b] = max(subProfit1[b],
+                                        subProfit1[b - price] + subDp1[price]);
+                }
+            }
+        }
+
+        for (int b = 0; b <= budget; b++) {
+            dp0[b] = dp1[b] = subProfit0[b];
+
+            if (b >= dCost) {
+                dp1[b] = max(subProfit0[b],
+                                subProfit1[b - dCost] + future[u] - dCost);
+            }
+
+            if (b >= cost) {
+                dp0[b] = max(subProfit0[b],
+                                subProfit1[b - cost] + future[u] - cost);
+            }
+        }
+
+        return {dp0, dp1, uPrice};
+    };
+public:
+    int maxProfit(int n, vector<int>& present, vector<int>& future, vector<vector<int>>& hierarchy, int budget) {
+        vector<vector<int>> g(n);
+        for (auto& e : hierarchy) {
+            g[e[0] - 1].push_back(e[1] - 1);
+        }
+        return std::get<0>(dfs(0, budget, g, present, future))[budget];
     }
 };
 ```
