--- a/algorithm/LeetCode/[Hard] 1349. Maximum Students Taking Exam.md
+++ b/algorithm/LeetCode/[Hard] 1349. Maximum Students Taking Exam.md
@@ -126,3 +126,102 @@ class Solution:
         
         return max(solve(R-1, x) for x in range(1 << C))
 ```
+
+**Solution 3: (DP Top-Down, bitmask, multi direction state constrain, level by level state combination)**
+```
+Runtime: 3 ms, Beats 63.25%
+Memory: 10.49 MB, Beats 54.22%
+```
+```c++
+class Solution {
+    int dfs(int i, int a, int n, vector<vector<int>> &dp, vector<int> &g) {
+        // prune
+        if (a & g[i] || a & (a << 1)) {
+            return 0;
+        }
+
+        if (dp[i][a] != -1) {
+            return dp[i][a];    
+        }
+        int one = __builtin_popcount(a);
+        if (i == 0) {
+            return one;
+        }
+        int rst = one;
+        for (int b = 0; b < (1 << n); b ++) {
+            if (!((a << 1) & b) && !((a >> 1) & b)) {
+                rst = max(rst, one + dfs(i - 1, b, n, dp, g));
+            }
+        }
+        dp[i][a] = rst;
+        return rst;
+    }
+public:
+    int maxStudents(vector<vector<char>>& seats) {
+        int m = seats.size(), n = seats[0].size(), i, j, a, ans = 0;
+        vector<int> g(m);
+        for (i = 0; i < m; i ++) {
+            a = 0;
+            for (j = 0; j < n; j ++) {
+                if (seats[i][j] == '#') {
+                    a += 1 << j;
+                }
+            }
+            g[i] = a;
+        }
+        vector<vector<int>> dp(m, vector<int>(1 << n, -1));
+        for (a = 0; a < (1 << n); a ++) {
+            ans = max(ans, dfs(m - 1, a, n, dp, g));
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 4: (DP Bottom-Up, bitmask, multi direction state constrain, level by level state combination)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 10.06 MB, Beats 83.13%
+```
+```c++
+class Solution {
+public:
+    int maxStudents(vector<vector<char>>& seats) {
+        int m = seats.size(), n = seats[0].size(), i, j, a;
+        vector<int> g(m);
+        for (i = 0; i < m; i ++) {
+            a = 0;
+            for (j = 0; j < n; j ++) {
+                if (seats[i][j] == '#') {
+                    a += 1 << j;
+                }
+            }
+            g[i] = a;
+        }
+        vector<int> pre(1 << n), cur(1 << n);
+        for (i = 0; i < m; i ++) {
+            for (a = 0; a < (1 << n); a ++) {
+                // prune
+                if (a & g[i] || a & (a << 1)) {
+                    continue;
+                }
+
+                int one = __builtin_popcount(a);
+                if (i == 0) {
+                    cur[a] = one;
+                    continue;
+                }
+                cur[a] = one;
+                for (int b = 0; b < (1 << n); b ++) {
+                    if (!((a << 1) & b) && !((a >> 1) & b)) {
+                        cur[a] = max(cur[a], one + pre[b]);
+                    }
+                }
+            }
+            swap(pre, cur);
+            fill(cur.begin(), cur.end(), 0);
+        }
+        return *max_element(pre.begin(), pre.end());
+    }
+};
+```
