update LeetCode Weekly Contest 484

--- a/algorithm/LeetCode/[Hard] 1216. Valid Palindrome III.md
+++ b/algorithm/LeetCode/[Hard] 1216. Valid Palindrome III.md
@@ -61,3 +61,75 @@ class Solution:
             
         return (N-dp(0, N-1)) <= k
 ```
+**Solution 3: (DP Bottom-Up, longest palindrom subsequence)**
+
+
+           x     x
+    s = "a b c d e c a", k = 2
+                     i
+dp       0 1 2 3 4 5 6
+         0 0 0 0 0 0 0
+--------------------------------
+    s = "a b c d e c a", k = 2
+                   i j
+dp       0 1 2 3 4 5 6
+         0 0 0 0 0 0 0
+--------------------------------
+    s = "a b c d e c a", k = 2
+                 i j
+dp       0 1 2 3 4 5 6
+         0 0 0 0 0 0 0
+--------------------------------
+    s = "a b c d e c a", k = 2
+               i j
+dp       0 1 2 3 4 5 6
+         0 0 0 0 0 0 0
+--------------------------------
+    s = "a b c d e c a", k = 2
+             i     j
+dp       0 1 2 3 4 5 6
+         0 0 0 0 0 2 2
+--------------------------------
+    s = "a b c d e c a", k = 2
+           i j
+dp       0 1 2 3 4 5 6
+         0 0 0 0 0 2 2
+--------------------------------
+    s = "a b c d e c a", k = 2
+         i           j
+dp       0 1 2 3 4 5 6
+         0 0 0 0 0 2 4
+
+```
+Runtime: 8 ms, Beats 84.68%
+Memory: 18.81 MB, Beats 82.26%
+```
+```c++
+class Solution {
+public:
+    bool isValidPalindrome(string s, int k) {
+        int n = s.length(), i, j;
+        vector<int> dp(n);
+        for (i = n - 1; i >= 0; i--) {
+            vector<int> newdp(n, 0);
+            newdp[i] = 1;
+            for (j = i + 1; j < n; j++) {
+                /*
+                if (s[i] == s[j]) {
+                    dp[i][j] = 2 + dp[i+1][j-1];
+                } else {
+                    dp[i][j] = max(dp[i+1][j], dp[i][j-1]);
+                }
+                */
+                if (s[i] == s[j]) {
+                    newdp[j] = 2 + dp[j-1];
+                } else {
+                    newdp[j] = max(dp[j], newdp[j-1]);
+                }
+            }
+            dp = newdp;
+        }
+        return (n - dp[n-1]) <= k;
+    }
+};
+```
