--- a/algorithm/LeetCode/[Hard] 1231. Divide Chocolate.md
+++ b/algorithm/LeetCode/[Hard] 1231. Divide Chocolate.md
@@ -84,3 +84,48 @@ class Solution:
                 right = mid - 1
         return right
 ```
+
+**Solution 2: (binary Search, upper bound)**
+
+    sweetness = [1,2,3,4,5,6,7,8,9], k = 5
+                 ----- --- - - - -
+
+    1 2 3 4 5 6 7 8 9
+    l       m       r
+              l m   r
+              lrm   
+              r lx
+ans         x x
+              ^
+```
+Runtime: 3 ms, Beats 68.86%
+Memory: 19.00 MB, Beats 97.60%
+```
+```c++
+class Solution {
+public:
+    int maximizeSweetness(vector<int>& sweetness, int k) {
+        int a = accumulate(begin(sweetness), end(sweetness), 0), b, ans;
+        int left = 1, right = a / (k + 1), mid, ck;
+        while (left <= right) {
+            mid = left + (right - left) / 2;
+            ck = 0;
+            b = 0;
+            for (auto &s: sweetness) {
+                b += s;
+                if (b >= mid) {
+                    ck += 1;
+                    b = 0;
+                }
+            }
+            if (ck < k + 1) {
+                right = mid - 1;
+            } else {
+                ans = mid;
+                left = mid + 1;
+            }
+        }
+        return ans;
+    }
+};
+```
