--- a/algorithm/LeetCode/[Hard] 1458. Max Dot Product of Two Subsequences.md
+++ b/algorithm/LeetCode/[Hard] 1458. Max Dot Product of Two Subsequences.md
@@ -85,25 +85,39 @@ class Solution:
 ```
 
 **Solution 3: (DP Bottom-Up)**
+
+    nums1 = [ 2, 1,-2,5], 
+             --    --
+    nums2 = [ 3, 0,-6]
+             --    --
+
+dp        3    0   -6, j nums2
+     0
+2         6    6    6
+1         6    6    6
+-2        6    6   18
+5        15   15   18
+,
+i                    
+nums1
 ```
-Runtime: 15 ms
-Memory: 9.8 MB
+Runtime: 11 ms, Beats 88.40%
+Memory: 14.02 MB, Beats 97.60%
 ```
 ```c++
 class Solution {
 public:
     int maxDotProduct(vector<int>& nums1, vector<int>& nums2) {
-        int m = nums1.size(), n = nums2.size();
-        std::vector<int> current(n + 1, INT_MIN), previous(n + 1, INT_MIN);
-
-        for (int i = 1; i <= m; ++i) {
-            for (int j = 1; j <= n; ++j) {
-                int curr_product = nums1[i-1] * nums2[j-1];
-                current[j] = std::max({curr_product, previous[j], current[j-1], curr_product + std::max(0, previous[j-1])});
+        int m = nums1.size(), n = nums2.size(), i, j, curr_product;
+        vector<int> dp(n + 1, INT_MIN), pre(n + 1, INT_MIN);
+        for (i = 1; i <= m; i++) {
+            for (j = 1; j <= n; j++) {
+                curr_product = nums1[i-1] * nums2[j-1];
+                dp[j] = max({curr_product, pre[j], dp[j-1], curr_product + max(0, pre[j-1])});
             }
-            std::swap(current, previous);
+            swap(dp, pre);
         }
-        return previous[n];
+        return pre[n];
     }
 };
 ```
