--- a/algorithm/LeetCode/[Hard] 2035. Partition Array Into Two Arrays to Minimize Sum Difference.md
+++ b/algorithm/LeetCode/[Hard] 2035. Partition Array Into Two Arrays to Minimize Sum Difference.md
@@ -111,6 +111,25 @@ class Solution:
 ```
 
 **Solution 2: (Binary Search, split to half then sort and binary search all possibility)**
+
+    nums = [3,9,7,3]
+
+total 22
+half  11
+                          (half - a) to search on right
+                             v
+left   3  9  7  3     sort target  cur  ans
+0                   0        11     2    2
+1      x            3         8     2 
+          x         9         2 
+2      x  x        12
+
+right
+0                   0
+1            x      7   3
+                x   3   7
+2            x  x  10
+
 ```
 Runtime: 435 ms, Beats 45.02%
 Memory: 73.50 MB, Beats 52.44%
@@ -142,8 +161,8 @@ public:
         for (i = 0; i <= n / 2; i ++) {
             for (auto a: left[i]) {
                 auto it = lower_bound(right[n - i].begin(), right[n - i].end(), (total - 2 * a) / 2);
-                if (it != right[n - i].end()) {
-                    ans = min(ans, abs(a + (*it) - (total - a - *it)));
+                if (it != right[n - i].end()) {                             // ^^^^^^^^^^^^^^^^^^^^^
+                    ans = min(ans, abs(a + (*it) - (total - a - *it)));     //    total / 2 - a  = half - a
                 }
                 if (it != right[n - i].begin()) {
                     ans = min(ans, abs(a + *prev(it) - (total - a - *prev(it))));
