update LeetCode Biweekly Contest 174

--- a/algorithm/LeetCode/[Hard[ 1944. Number of Visible People in a Queue.md
+++ b/algorithm/LeetCode/[Hard[ 1944. Number of Visible People in a Queue.md
@@ -59,6 +59,14 @@ class Solution:
 ```
 
 **Solution 2: (Stack, Monotonic decreasing stack)**
+
+    heights = [ 10,  6,  8,  5, 11,  9]
+stk             11  11  11  11   9x  9
+                 8x  8   5x  5  11
+                 6x  6   8
+                10
+ans              3   1   2   1   1   0
+                                    <-
 ```
 Runtime: 15 ms, Beats 54.44%
 Memory: 88.70 MB, Beats 59.32%
