--- a/algorithm/LeetCode/[Easy] 1266. Minimum Time Visiting All Points.md
+++ b/algorithm/LeetCode/[Easy] 1266. Minimum Time Visiting All Points.md
@@ -55,16 +55,16 @@ class Solution:
 
 **Solution 2: (Geometry, Greedy)**
 ```
-Runtime: 10 ms
-Memory: 10.6 MB
+Runtime: 0 ms, Beats 100.00%
+Memory: 13.65 MB, Beats 88.14%
 ```
 ```c++
 class Solution {
 public:
     int minTimeToVisitAllPoints(vector<vector<int>>& points) {
-        int ans = 0;
-        for (int i = 1; i < points.size(); i ++) {
-            ans += max(abs(points[i][0]-points[i-1][0]), abs(points[i][1]-points[i-1][1]));
+        int n = points.size(), i, ans = 0;
+        for (i = 1; i < n; i ++) {
+            ans += max(abs(points[i][0] - points[i - 1][0]), abs(points[i][1] - points[i - 1][1]));
         }
         return ans;
     }
