update LeetCode Biweekly Contest 175

--- a/algorithm/LeetCode/[Easy] 1539. Kth Missing Positive Number.md
+++ b/algorithm/LeetCode/[Easy] 1539. Kth Missing Positive Number.md
@@ -179,3 +179,45 @@ public:
     }
 };
 ```
+
+**Solution 7: (Binary Search, lower bound)**
+
+            0  1  2  3  4
+    arr = [ 2, 3, 4, 7,11], k = 5
+            l     p     r
+                     lp r
+                        lrp
+                     r  lx
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 13.18 MB, Beats 90.55%
+```
+```c++
+class Solution {
+public:
+    int findKthPositive(vector<int>& arr, int k) {
+        int left = 0, right = arr.size() - 1;
+        while (left <= right) {
+            int pivot = left + (right - left) / 2;
+            // If number of positive integers
+            // which are missing before arr[pivot]
+            // is less than k -->
+            // continue to search on the right.
+            if (arr[pivot] - pivot - 1 < k) {
+                left = pivot + 1;
+            // Otherwise, go left.
+            } else {
+                right = pivot - 1;
+            }
+        }
+
+        // At the end of the loop, left = right + 1,
+        // and the kth missing is in-between arr[right] and arr[left].
+        // The number of integers missing before arr[right] is
+        // arr[right] - right - 1 -->
+        // the number to return is
+        // arr[right] + k - (arr[right] - right - 1) = k + left
+        return left + k;
+    }
+};
+```
