--- a/algorithm/LeetCode/[Hard] 1235. Maximum Profit in Job Scheduling.md
+++ b/algorithm/LeetCode/[Hard] 1235. Maximum Profit in Job Scheduling.md
@@ -114,7 +114,7 @@ public:
 };
 ```
 
-**Solution 3: (DP Bottom-Up, Binary Search, Sort)**
+**Solution 3: (DP Bottom-Up, Binary Search, sort by end time and search by start)**
 ```
 Runtime: 105 ms
 Memory: 62.4 MB
@@ -144,6 +144,50 @@ public:
         }
       
         return dp[numJobs];
+    }
+};
+```
+
+**Solution 4: (DP Bottom-Up, Binary Search, sort by end time and search by start)**
+
+    startTime = [1,2,3,4,6], endTime = [3,5,10,6,9], profit = [20,20,100,70,60]
+
+    |-20--|
+       |---20---|
+             |-70--|
+                   |---60---|
+          |------100------------|
+    1  2  3  4  5  6  7  8  9  10
+jobs:                                     e s
+    (3,1,20) (5,2,20) (6,4,70) (9,6,60) (10,3,100)
+                                            i
+dp:
+ 0     20       20        90     150       max(150,120)
+                                           ans
+```
+Runtime: 32 ms, Beats 81.10%
+Memory: 77.18 MB, Beats 93.49%
+```
+```c++
+class Solution {
+public:
+    int jobScheduling(vector<int>& startTime, vector<int>& endTime, vector<int>& profit) {
+        int n = profit.size(), i, j;
+        vector<array<int, 3>> jobs(n);
+        for (int i = 0; i < n; ++i) {
+            jobs[i] = {endTime[i], startTime[i], profit[i]};
+        }
+        sort(jobs.begin(), jobs.end());
+        vector<int> dp(n + 1);
+        for (i = 0; i < n; ++i) {
+            auto &[_, __, p] = jobs[i];
+            j = upper_bound(jobs.begin(), jobs.begin() + i, jobs[i], [](auto &qa, auto &a) -> bool {
+                return qa[1] < a[0];
+            }) - jobs.begin();
+          
+            dp[i + 1] = max(dp[i], dp[j] + p);
+        }
+        return dp[n];
     }
 };
 ```
