--- a/algorithm/LeetCode/[Hard] 2528. Maximize the Minimum Powered City.md
+++ b/algorithm/LeetCode/[Hard] 2528. Maximize the Minimum Powered City.md
@@ -150,7 +150,19 @@ public:
 };
 ```
 
-**Solution 2: (Binary Search, Greedy, upper bound)**
+**Solution 2: (Binary Search, Greedy, upper bound, set power statation as far as possible)**
+
+                 0  1  2  3  4
+    stations = [ 1, 2, 4, 5, 0], r = 1, k = 2
+mid = 5
+dp               1  2  4  5  0
+                   +2
+                             i               
+k            2  -2   
+a            0   3  9 13  9  5     
+                +2 -1 -4 -4  0
+d                2      
+
 ```
 Runtime: 62 ms, Beats 95.58%
 Memory: 146.48 MB, Beats 77.29%
