--- a/algorithm/LeetCode/[Hard] 3321. Find X-Sum of All K-Long Subarrays II.md
+++ b/algorithm/LeetCode/[Hard] 3321. Find X-Sum of All K-Long Subarrays II.md
@@ -108,6 +108,11 @@ public:
 ```
 
 **Solution 2: (Sliding Window, top and bottom set)**
+ 
+insert -> bottom set ->     top set
+                        ------------------
+                               x
+                            sum = a = ans[i]
 ```
 Runtime: 874 ms, Beats 64.06%
 Memory: 345.13 MB, Beats 10.94%
