--- a/algorithm/LeetCode/[Easy] 1200. Minimum Absolute Difference.md
+++ b/algorithm/LeetCode/[Easy] 1200. Minimum Absolute Difference.md
@@ -108,10 +108,10 @@ int** minimumAbsDifference(int* arr, int arrSize, int* returnSize, int** returnC
 }
 ```
 
-**Solution 3: (Greedy)**
+**Solution 3: (Sort, Greedy)**
 ```
-Runtime: 45 ms
-Memory: 36.04 MB
+Runtime: 15 ms, Beats 76.77%
+Memory: 36.46 MB, Beats 99.20%
 ```
 ```c++
 class Solution {
@@ -120,14 +120,72 @@ public:
         sort(arr.begin(), arr.end());
         vector<vector<int>> ans;
         for (int i = 0; i < arr.size()-1; i ++) {
-            if (ans.size() == 0 || arr[i+1]-arr[i] < ans.back()[1]-ans.back()[0]) {
+            if (ans.size() == 0 || arr[i + 1] - arr[i] < ans.back()[1] - ans.back()[0]) {
                 ans.clear();
-                ans.push_back({arr[i], arr[i+1]});
-            } else if (arr[i+1] - arr[i] == ans.back()[1] - ans.back()[0]) {
-                ans.push_back({arr[i], arr[i+1]});
+                ans.push_back({arr[i], arr[i + 1]});
+            } else if (arr[i + 1] - arr[i] == ans.back()[1] - ans.back()[0]) {
+                ans.push_back({arr[i], arr[i + 1]});
             }
         }
         return ans;
+    }
+};
+```
+
+**Solution 4: (Counting Sort)**
+```
+Runtime: 9 ms, Beats 98.36%
+Memory: 42.04 MB, Beats 5.04%
+```
+```c++
+class Solution {
+public:
+    vector<vector<int>> minimumAbsDifference(vector<int>& arr) {
+        // Initialize the auxiliary array `line`.
+        // Keep a record of the minimum element and the maximum element.
+        int minElement = *min_element(arr.begin(), arr.end());
+        int maxElement = *max_element(arr.begin(), arr.end());
+        int shift = -minElement;
+        vector<uint8_t> line(maxElement - minElement + 1);
+        vector<vector<int>> answer;
+        
+        // For each integer `num` in `arr`, we increment line[num + shift] by 1.
+        for (const int& num : arr) {
+            line[num + shift] = 1;
+        }
+        
+        // Start from the index representing the minimum integer, initialize the 
+        // absolute difference `min_pair_diff` as a huge value such as
+        // `max_element - min_element` in order not to miss the absolute 
+        // difference of the first pair.
+        int minPairDiff = maxElement - minElement;
+        int prev = 0;
+        
+        // Iterate over the array `line` and check if line[curr] 
+        // holds the occurrence of an input integer.
+        for (int curr = 1; curr <= maxElement + shift; ++curr) {
+            // If line[curr] == 0, meaning there is no occurrence of the integer (curr - shift) 
+            // held by this index, we will move on to the next index.
+            if (line[curr] == 0) {
+                continue;
+            }
+            
+            // If the difference (curr - prev) equals `minPairDiff`, we add this pair 
+            // {prev - shift, curr - shift} to the answer list. Otherwise, if the difference 
+            // (curr - prev) is smaller than `minPairDiff`, we empty the answer list and add 
+            // the pair {curr - shift, prev - shift} to the answre list and update the `minPairDiff`
+            if (curr - prev == minPairDiff) {
+                answer.push_back({prev - shift, curr - shift});
+            } else if (curr - prev < minPairDiff) {
+                minPairDiff = curr - prev;
+                answer = {{prev - shift, curr - shift}};
+            }        
+
+            // Update prev as curr.
+            prev = curr;
+        }
+        
+        return answer;
     }
 };
 ```
