--- a/algorithm/LeetCode/[Easy] 3010. Divide an Array Into Subarrays With Minimum Cost I.md
+++ b/algorithm/LeetCode/[Easy] 3010. Divide an Array Into Subarrays With Minimum Cost I.md
@@ -46,6 +46,11 @@ It can be shown that 12 is the minimum cost achievable.
 # Submissions
 ---
 **Solution 1: (Greedy)**
+
+        10  3   1 1
+min1        3   1 1
+min2        100 3 1
+
 ```
 Runtime: 0 ms
 Memory: 29.38 MB
@@ -56,7 +61,7 @@ public:
     int minimumCost(vector<int>& nums) {
         int min1 = 100, min2 = 100;
         for (int i = 1; i < nums.size(); i ++) {
-            if (nums[i] < min1){
+            if (nums[i] < min1){  // smallest
                 min2 = min1;
                 min1 = nums[i];
             } else if (nums[i] < min2) {
@@ -65,6 +70,34 @@ public:
         }        
         int ans = nums[0] + min1 + min2;
         return ans;
+    }
+};
+```
+
+**Solution 2: (Greedy)**
+
+        10  3   1 1
+a  100      3   1 1  | smallest
+b  100      100 3 1  v
+
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 30.60 MB, Beats 17.09%
+```
+```c++
+class Solution {
+public:
+    int minimumCost(vector<int>& nums) {
+        int n = nums.size(), i, ans = nums[0], a = 100, b = 100;
+        for (i = 1; i < n; i ++) {
+            if (nums[i] < a) {  // smallest
+                b = a;
+                a = nums[i];
+            } else if (nums[i] < b) {
+                b = nums[i];
+            }
+        }
+        return ans + a + b;
     }
 };
 ```
