--- a/algorithm/LeetCode/[Hard] 1483. Kth Ancestor of a Tree Node.md
+++ b/algorithm/LeetCode/[Hard] 1483. Kth Ancestor of a Tree Node.md
@@ -81,11 +81,12 @@ class TreeAncestor:
        / \    /  \
       3  4   5   6
 
+                0  1  2  3  4  5  6
     parents = [-1, 0, 0, 1, 1, 2, 2]
-                vi
-    par        -1  0  0  1  1  2  2 <j
-                  -1 -1  0  0  0  0
-                        -1 -1 -1 -1
+    par         vi
+    0          -1  0  0  1  1  2  2 <j
+    1             -1 -1  0  0  0  0
+    2                   -1 -1 -1 -1
 ```
 Runtime: 57 ms, Beats 61.59%
 Memory: 124.52 MB, Beats 45.15%
