--- a/algorithm/LeetCode/[Hard] 2092. Find All People With Secret.md
+++ b/algorithm/LeetCode/[Hard] 2092. Find All People With Secret.md
@@ -210,6 +210,26 @@ public:
 ```
 
 **Solution 5: (Union Find, group by time else reset)**
+
+    n = 6, meetings = [[1,2,5],[2,3,8],[1,5,10]], firstPerson = 1
+
+    0  1  2  3  4  5  6  7  8  9  10
+0   x              .        .      .
+1   x              x        .      x
+2                  x        x      .
+3                           x      .
+4
+5                                  x
+                                   ^
+
+    n = 4, meetings = [[3,1,3],[1,2,2],[0,3,3]], firstPerson = 3
+
+    0  1  2  3
+0   x        x
+1         x  x
+2         x
+3   x        x
+             ^
 ```
 Runtime: 140 ms, Beats 73.17%
 Memory: 207.29 MB, Beats 37.67%
