--- a/algorithm/LeetCode/[Hard] 2977. Minimum Cost to Convert String II.md
+++ b/algorithm/LeetCode/[Hard] 2977. Minimum Cost to Convert String II.md
@@ -128,3 +128,204 @@ public:
     }
 };
 ```
+
+**Solution 2: (Trie + Floyd's Algorithm + Dynamic Programming, O(n^2 (DP) + m^3 (Floyd) + mL(Trie))**
+
+    source = "abcdefgh", target = "acdeeghh", original = ["bcd","fgh","thh"], changed = ["cde","thh","ghh"], cost = [1,3,5]
+
+trie:
+r -> b -> c -> d
+               id: 0
+  -> c -> d -> e
+               id: 1
+  -> f -> g -> h
+               id: 2
+  -> t -> h -> h
+               id: 3
+  -> g -> h -> h
+               id: 4
+
+          0    1    2    3    4
+G        bcd  cde  fgh  thh  ghh
+0  bcd    0    1
+1  cde         0
+2  fgh              0    3    8
+3  thh                   0    5
+4  ghh                        0
+
+source   a  b  c  d  e  f  g  h
+target   a  c  d  e  e  g  h  h
+         0  1  2  3  4  5  6  7
+f        0 -1 -1  1  1 -1 -1  9 < ans 
+base     0  0 -1 -1  1  1 -1 -1
+
+```
+Runtime: 783 ms, Beats 41.38%
+Memory: 376.43 MB, Beats 11.50%
+```
+```c++
+struct Trie {
+    Trie* child[26];
+    int id;
+
+    Trie() {
+        for (int i = 0; i < 26; ++i) {
+            child[i] = nullptr;
+        }
+        id = -1;
+    }
+};
+
+int add(Trie* node, const string& word, int& index) {
+    for (char ch : word) {
+        int i = ch - 'a';
+        if (!node->child[i]) {
+            node->child[i] = new Trie();
+        }
+        node = node->child[i];
+    }
+    if (node->id == -1) {
+        node->id = ++index;
+    }
+    return node->id;
+}
+
+void update(long long& x, long long y) {
+    if (x == -1 || y < x) {
+        x = y;
+    }
+}
+
+class Solution {
+private:
+    static constexpr int inf = INT_MAX / 2;
+public:
+    long long minimumCost(string source, string target, vector<string>& original, vector<string>& changed, vector<int>& cost) {
+        int n = source.size();
+        int m = original.size();
+        Trie* root = new Trie();
+
+        int p = -1;
+        vector<vector<int>> G(m * 2, vector<int>(m * 2, inf));
+        for (int i = 0; i < m * 2; ++i) {
+            G[i][i] = 0;
+        }
+        for (int i = 0; i < m; ++i) {
+            int x = add(root, original[i], p);
+            int y = add(root, changed[i], p);
+            G[x][y] = min(G[x][y], cost[i]);
+        }
+
+        for (int k = 0; k <= p; ++k) {
+            for (int i = 0; i <= p; ++i) {
+                for (int j = 0; j <= p; ++j) {
+                    G[i][j] = min(G[i][j], G[i][k] + G[k][j]);
+                }
+            }
+        }
+
+        vector<long long> f(n, -1);
+        for (int j = 0; j < n; ++j) {
+            if (j > 0 && f[j - 1] == -1) {
+                continue;
+            }
+            long long base = (j == 0 ? 0 : f[j - 1]);
+            if (source[j] == target[j]) {
+                update(f[j], base);
+            }
+            Trie* u = root;
+            Trie* v = root;
+            for (int i = j; i < n; ++i) {
+                u = u->child[source[i] - 'a'];
+                v = v->child[target[i] - 'a'];
+                if (!u || !v) {
+                    break;
+                }
+                if (u->id != -1 && v->id != -1 && G[u->id][v->id] != inf) {
+                    update(f[i], base + G[u->id][v->id]);
+                }
+            }
+        }
+        return f[n - 1];
+    }
+};
+```
+
+**Solution 3: (Trie + Floyd's Algorithm + Dynamic Programming, O(n^2 (DP) + m^3 (Floyd) + mL(Trie))**
+```
+Runtime: 808 ms, Beats 40.23%
+Memory: 376.34 MB, Beats 12.64%
+```
+```c++
+class Solution {
+    struct TrieNode {
+        TrieNode *child[26] = {nullptr};
+        int id = -1;
+    };
+    TrieNode *root;
+    int add(string &s, int &id) {
+        TrieNode *node = root;
+        for (auto &c: s) {
+            if (node->child[c - 'a'] == nullptr) {
+                node->child[c - 'a'] = new TrieNode();
+            }
+            node = node->child[c - 'a'];
+        }
+        if (node->id == -1) {
+            id += 1;
+            node->id = id;
+        }
+        return node->id;
+    }
+public:
+    long long minimumCost(string source, string target, vector<string>& original, vector<string>& changed, vector<int>& cost) {
+        int m = original.size(), n = source.size(), id = -1, i, j, k, idx, idy;
+        root = new TrieNode();
+        vector<vector<int>> g(m * 2, vector<int>(m * 2, INT_MAX / 2));
+        for (i = 0; i < m * 2; i ++) {
+            g[i][i] = 0;
+        }
+        for (i = 0; i < m; i ++) {
+            idx = add(original[i], id);
+            idy = add(changed[i], id);
+            g[idx][idy] = min(g[idx][idy], cost[i]);
+        }
+        for (k = 0; k <= id; k ++) {
+            for (i = 0; i <= id; i ++) {
+                for (j = 0; j <= id; j ++) {
+                    g[i][j] = min(g[i][j], g[i][k] + g[k][j]);
+                }
+            }
+        }
+        vector<long long> dp(n, -1);
+        long long base;
+        TrieNode *u, *v;
+        for (j = 0; j < n; j ++) {
+            if (j > 0 && dp[j - 1] == -1) {
+                continue;
+            }
+            base = j == 0 ? 0 : dp[j - 1];
+            if (source[j] == target[j]) {
+                if (dp[j] == -1 || base < dp[j]) {
+                    dp[j] = base;
+                }
+            }
+            u = root;
+            v = root;
+            for (i = j; i < n; i ++) {
+                u = u->child[source[i] - 'a'];
+                v = v->child[target[i] - 'a'];
+                if (!u || !v) {
+                    break;
+                }
+                if (u->id != -1 && v->id != -1 && g[u->id][v->id] != INT_MAX / 2) {
+                    if (dp[i] == -1 || base + g[u->id][v->id] < dp[i]) {
+                        dp[i] = base + g[u->id][v->id];
+                    }
+                }
+            }
+        }
+        return dp[n - 1];
+    }
+};
+```
