--- a/algorithm/LeetCode/[Hard] 3013. Divide an Array Into Subarrays With Minimum Cost II.md
+++ b/algorithm/LeetCode/[Hard] 3013. Divide an Array Into Subarrays With Minimum Cost II.md
@@ -178,3 +178,83 @@ public:
     }
 };
 ```
+
+**Solution 2: (2 Multiset, Sliding Window)**
+
+          0 1         dist+1
+arr      [                          ]
+     -> 
+                            |k-1|
+left                        >>>>>
+                                ^
+right                       <<<
+                            ^
+                          balancing
+                      ans   ans
+
+               0    1    2    3     4    5
+    nums = [   1,   3,   2,   6,    4,   2], k = 3, dist = 3
+                    x                    i
+k         2
+cur            1    4    6    12   16    6
+                                   10    4
+                                    6    6
+left                3   23   236 2346   23x  
+                                   23    2
+                                        22
+right                               6
+                                   46
+ans                                 5    5 < ans
+
+```
+Runtime: 374 ms, Beats 71.88%
+Memory: 157.76 MB, Beats 70.31%
+```
+```c++
+class Solution {
+public:
+    long long minimumCost(vector<int>& nums, int k, int dist) {
+        int n = nums.size(), i;
+        multiset<long long> left, right;
+        k -= 1;
+        long long cur = nums[0];
+        for (i = 1; i <= dist + 1; i++) {
+            cur += nums[i];
+            left.insert(nums[i]);
+        }
+        while (left.size() > k) {
+            cur -= *left.rbegin();
+            right.insert(*left.rbegin());
+            left.erase(prev(left.end()));
+        }
+        long long ans = cur;
+
+        for (i = dist + 2; i < n; i++) {
+            if (left.find(nums[i - dist - 1]) != left.end()) {
+                cur -= nums[i - dist - 1];
+                left.erase(left.find(nums[i - dist - 1]));
+            } else {
+                right.erase(right.find(nums[i - dist - 1]));
+            }
+            if (nums[i] < *left.rbegin()) {
+                cur += nums[i];
+                left.insert(nums[i]);
+            } else {
+                right.insert(nums[i]);
+            }
+            while (left.size() < k) {
+                cur += *right.begin();
+                left.insert(*right.begin());
+                right.erase(right.begin());
+            }
+            while (left.size() > k) {
+                cur -= *left.rbegin();
+                right.insert(*left.rbegin());
+                left.erase(prev(left.end()));
+            }
+            ans = min(ans, cur);
+        }
+        return ans;
+    }
+};
+```
