--- a/algorithm/LeetCode/[Hard] 3826. Minimum Partition Score.md
+++ b/algorithm/LeetCode/[Hard] 3826. Minimum Partition Score.md
@@ -64,14 +64,20 @@ The score of this partition is 1 + 1 + 1 = 3, which is the minimum possible scor
     nums = [5,1,2,1], k = 2
 pref        0 5 6 8 9
 
+dp  0  1  2
+0         25
+1      10   
+2       6   
+3       1   
+
                  i,k
                  0,2
-           /      |     \
+       > 15/    21|   36\
         1,1      2,1     3,1
-     /  |   \    /  \     /
+     /  | 10\ <  / 6\    1/
    2,0 3,0 4,0 3,0  4,0  4,0
-    x   x       x
-
+    x   x   ^   x
+            ans
 ```
 Runtime: 975 ms, Beats 28.57%
 Memory: 110.57 MB, Beats 52.38%
