update LeetCode Weekly Contest 488

--- a/algorithm/LeetCode/[Easy] 3379. Transformed Array.md
+++ b/algorithm/LeetCode/[Easy] 3379. Transformed Array.md
@@ -57,9 +57,9 @@ class Solution {
 public:
     vector<int> constructTransformedArray(vector<int>& nums) {
         int n = nums.size(), i;
-        vector<int> ans;
+        vector<int> ans(n);
         for (i = 0; i < n; i ++) {
-            ans.push_back(nums[((i + nums[i])%n + n)%n]);
+            ans[i] = nums[((i + nums[i]) % n + n) % n];
         }
         return ans;
     }
