--- a/algorithm/LeetCode/[Hard] 2402. Meeting Rooms III.md
+++ b/algorithm/LeetCode/[Hard] 2402. Meeting Rooms III.md
@@ -263,15 +263,21 @@ public:
 
 **Solution 5: (Sort, Heap, 1 priority queue)**
 
-r                   0  1  2  3  4  5  6  7  8  9  10
-0*                  |-------------0----------------> 
+    n = 2, meetings = [[0,10],[1,5],[2,7],[3,4]]
+
+                    0  1  2  3  4  5  6  7  8  9  10
+                    |-------------0----------------> 
+                       |------1---->                 
+                          |-----2-------->
                              |3->
+--------------------------------------------------------
+room
+0*                  |-------------0----------------> 
                                                   |3->
 1                      |------1---->                 
-                          |-----2-------->
                                    |-----2-------->
 t                      ^
-pq
+pq (time, room)
 0           {-1,0}  {0,0}x                         {10,0}
 1           {-1,1}  {0,1}
                       {1,1}x       {5,1}
@@ -289,7 +295,7 @@ public:
         vector<int> cnt(n);
         priority_queue<pair<long long, int>, vector<pair<long long, int>>, greater<>> pq;
         for (i = 0; i < n; i ++) {
-            pq.push({-1, i});
+            pq.push({-1, i});  // time, room
         }
         sort(begin(meetings), end(meetings));
         for (i = 0; i < m; i ++) {
