--- a/algorithm/LeetCode/[Hard] 2858. Minimum Edge Reversals So Every Node Is Reachable.md
+++ b/algorithm/LeetCode/[Hard] 2858. Minimum Edge Reversals So Every Node Is Reachable.md
@@ -57,7 +57,7 @@ So, answer[2] = 1.
 
 # Submissions
 ---
-**Solution 1: (DP on Tree)**
+**Solution 1: (DP on Tree, TLE)**
 
 G[i][j] is the cost to go from i to j.
 For edge [i, j],
@@ -74,6 +74,31 @@ Finally we return dfs(-1, i) for each node i as the root.
 
 * Time O(n), worst O(n^2)
 * Space O(n)
+
+  n = 3, edges = [[1,2],[2,0]]
+
+      2
+     ^ v
+    1   0
+
+G   0   1   2  
+0           1
+1           0
+2   0   1
+
+dp  -1   0   1   2
+-1       2   0   1
+0                1
+1                0
+2        0   0
+
+
+        -1,0       -1,1        -1,2
+       1/          0/          1/  \0
+      0,2         1,2         2,1   2,0
+     1/          0/            0     0
+    2,1          2,0 
+     0            0
 
 ```
 Runtime: 1355 ms
@@ -105,6 +130,155 @@ public:
           res[i] = dfs(-1, i);
         }
         return res;
+    }
+};
+```
+
+**Solution 2: (Twice DFS)**
+
+The solution is a good but actuallly TLE soluiton.
+In the case of [[0,1],[0,2],[0,3]....[0,n-1]],
+each edge will be picked in each call of dfs,
+it will become O(n^2) in total.
+
+One solution is get the result for one root,
+then pass the result in the tree by one more dfs.
+
+Time O(n)
+Space O(n)
+
+```
+Runtime: 2058 ms, Beats 6.28%
+Memory: 379.10 MB, Beats 5.14%
+```
+```c++
+class Solution {
+public:
+    vector<int> minEdgeReversals(int n, vector<vector<int>>& edges) {
+        unordered_map<int, unordered_map<int, int>> G;
+        for (auto& e : edges) {
+            G[e[0]][e[1]] = 0, G[e[1]][e[0]] = 1;
+        }
+        vector<int> res(n, -1);
+
+        function<int(int, int)> dp = [&](int i, int j) {
+            int cur = 0;
+            for (auto& k : G[j]) {
+                if (k.first == i) continue;
+                cur += dp(j, k.first) + k.second;
+            }
+            return cur;
+        };
+
+        function<void(int, int)> dfs = [&](int i, int v) {
+            res[i] = v;
+            for (auto& j : G[i])
+                if (res[j.first] < 0)
+                    dfs(j.first, v - j.second + G[j.first][i]);
+        };
+
+        dfs(0, dp(-1, 0));
+        return res;
+    }
+};
+```
+
+**Solution 3: (DFS)**
+
+Intuition
+Solve the problem for some arbitrary node, then use the result to calculate for the rest of the nodes.
+This is often called "Re-Rooting".
+
+Observation
+Assume we know the answer for node u and consider v, a neighbour of u.
+The answer for v is going to be either answer[u] + 1 or answer[u] - 1.
+
+Explanation
+First run dfs on node 0, for each reversed edge we add 1 to cnt,
+in the end we solved the problem for node 0.
+
+Secondly, we run dfs2, there are two cases:
+when we go to a neighbour with a directed edge:
+we have to reverse that edge to go back to our parent, so do cnt + 1.
+
+when we go to a neighbour with a reversed directed edge:
+we need to decrease the counter because we no longer need to pay for that edge, so do cnt - 1.
+
+Complexity
+Time complexity O(n).
+Space complexity O(n).
+
+Variables in the code
+g is the original graph, and rg is the reversed graph.
+in both of the dfs functions, u is the current node, p is the parent, and v is a neighbour of u.
+cnt is how many edges we need to reverse in order to satisfy the condition for u.
+
+  n = 4, edges = [[2,0],[2,1],[1,3]]
+
+          2
+       v     v
+    1           0
+       v
+          3
+
+         1/
+        0,-1 (u,p)
+       0/
+      2,0
+     1/
+    1,2
+  2/
+ 3,1
+
+      0   1   2   3
+ans   1   1   0   2
+
+```
+Runtime: 1270 ms, Beats 15.04%
+Memory: 249.93 MB, Beats 24.19%
+```
+```c++
+class Solution {
+public:
+    vector<int> minEdgeReversals(int n, vector<vector<int>>& edges) {
+        vector<vector<int>> g(n);
+        vector<vector<int>> rg(n);
+        for (auto &e: edges) {
+            g[e[0]].push_back(e[1]);
+            rg[e[1]].push_back(e[0]);
+        }
+        
+        function<int(int, int)> dfs = [&](int u, int p) -> int {
+            int cnt = 0;
+            for (auto &v: g[u]) {
+                if (v == p) continue;
+                cnt += dfs(v, u);
+            }
+            for (auto &v: rg[u]) {
+                if (v == p) continue;
+                cnt++;
+                cnt += dfs(v, u);
+            }
+            return cnt;
+        };
+        
+        vector<int> answer(n, 0);
+        answer[0] = dfs(0, -1);
+        
+        function<void(int, int, int)> dfs2 = [&](int u, int p, int cnt) {
+            answer[u] = cnt;
+            for (auto &v: g[u]) {
+                if (v == p) continue;
+                dfs2(v, u, cnt + 1);
+            }
+            for (auto &v: rg[u]) {
+                if (v == p) continue;
+                dfs2(v, u, cnt - 1);
+            } 
+        };
+        
+        dfs2(0, -1, answer[0]);
+        return answer;
     }
 };
 ```
