--- a/algorithm/LeetCode/[Hard] 3640. Trionic Array II.md
+++ b/algorithm/LeetCode/[Hard] 3640. Trionic Array II.md
@@ -103,3 +103,160 @@ public:
     }
 };
 ```
+
+**Solution 2: (Grouped Loop)**
+```
+Runtime: 4 ms, Beats 89.09%
+Memory: 132.60 MB, Beats 99.09%
+```
+```c++
+class Solution {
+public:
+    long long maxSumTrionic(vector<int>& nums) {
+        int n = nums.size();
+        int p, q, j;
+        long long max_sum, sum, res;
+        long long ans = LLONG_MIN;
+        for (int i = 0; i < n; i++) {
+            j = i + 1;
+            res = 0;
+            // first segment
+            for (; j < n && nums[j - 1] < nums[j]; j++);
+            p = j - 1;
+            if (p == i) {
+                continue;
+            }
+            // second segment
+            res += nums[p] + nums[p - 1];
+            for (; j < n && nums[j - 1] > nums[j]; j++) {
+                res += nums[j];
+            }
+            q = j - 1;
+            if (q == p || q == n - 1 || (nums[j] <= nums[q])) {
+                i = q;
+                continue;
+            }
+            // third segment
+            res += nums[q + 1];
+            // find the maximum sum of the third segment
+            max_sum = 0;
+            sum = 0;
+            for (int k = q + 2; k < n && nums[k] > nums[k - 1]; k++) {
+                sum += nums[k];
+                max_sum = max(max_sum, sum);
+            }
+            res += max_sum;
+            // find the maximum sum of the first segment
+            max_sum = 0;
+            sum = 0;
+            for (int k = p - 2; k >= i; k--) {
+                sum += nums[k];
+                max_sum = max(max_sum, sum);
+            }
+            res += max_sum;
+            // update answer
+            ans = max(ans, res);
+            i = q - 1;
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 3: (DP Bottom Up)**
+
+dp0...dp3
+* dpk[i] is the max sum of a subarray ending at i after finishing k of the four phases (start -> inc -> dec -> inc)
+* dp0[i] = max(nums[i], dp0[i - 1] + nums[i])
+* dpk[i] = max(dpk[i] + nums[i], dp(k-1)[i - 1] + nums[i])
+              ^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^
+              current segment          new segment        
+
+             dp3 
+      dp1   / /
+    /\/ \  / /
+   / /\  \/ / 
+  / /  dp2  
+  dp0       
+
+             0  1  2  3  4  5  6
+    nums = [ 0,-2,-1,-3, 0, 2,-1]
+               -----------
+ ^  dp0      0 -2 -3 -3 -3 -1
+ ^  dp1           -3   
+ v  dp2              -6
+ ^  dp3                 -6 -4 
+
+```
+Runtime: 17 ms, Beats 62.73%
+Memory: 172.66 MB, Beats 21.82%
+```
+```c++
+class Solution {
+public:
+    long long maxSumTrionic(vector<int>& nums) {
+        int n = nums.size(), i;
+        vector<long long> dp0(n), dp1(n, -1e15), dp2(n, -1e15), dp3(n, -1e15);
+        long long ans = LONG_LONG_MIN;
+        dp0[0] = nums[0];
+        for (i = 1; i < n; i ++) {
+            dp0[i] = nums[i];
+            if (nums[i] > nums[i - 1]) {
+                dp0[i] = max(dp0[i], dp0[i - 1] + nums[i]);
+            }
+            if (nums[i] > nums[i - 1]) {
+                dp1[i] = max(dp1[i - 1] + nums[i], dp0[i - 1] + nums[i]);
+            }
+            if (nums[i] < nums[i - 1]) {
+                dp2[i] = max(dp2[i - 1] + nums[i], dp1[i - 1] + nums[i]);
+            }
+            if (nums[i] > nums[i - 1]) {
+                dp3[i] = max(dp3[i - 1] + nums[i], dp2[i - 1] + nums[i]);
+            }
+            ans = max(ans, dp3[i]);
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 4: (DP Bottom Up 1-D)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 132.76 MB, Beats 80.00%
+```
+```c++
+class Solution {
+public:
+    long long maxSumTrionic(vector<int>& nums) {
+        int n = nums.size(), i;
+        long long dp0, dp1 = -1e15, dp2 = -1e15, dp3 = -1e15;
+        long long ans = LONG_LONG_MIN;
+        dp0 = nums[0];
+        for (i = 1; i < n; i ++) {
+            if (nums[i] > nums[i - 1]) {
+                dp3 = max(dp3 + nums[i], dp2 + nums[i]);
+            } else {
+                dp3 = -1e15;
+            }
+            if (nums[i] < nums[i - 1]) {
+                dp2 = max(dp2 + nums[i], dp1 + nums[i]);
+            } else {
+                dp2 = -1e15;
+            }
+            if (nums[i] > nums[i - 1]) {
+                dp1 = max(dp1 + nums[i], dp0 + nums[i]);
+            } else {
+                dp1 = -1e15;
+            }
+            if (nums[i] > nums[i - 1]) {
+                dp0 = max(dp0 + nums[i], (long long)nums[i]);
+            } else {
+                dp0 = nums[i];
+            }
+            ans = max(ans, dp3);
+        }
+        return ans;
+    }
+};
+```
