--- a/algorithm/LeetCode/[Easy] 3637. Trionic Array I.md
+++ b/algorithm/LeetCode/[Easy] 3637. Trionic Array I.md
@@ -56,24 +56,51 @@ class Solution {
 public:
     bool isTrionic(vector<int>& nums) {
         int n = nums.size(), i = 0, j = 0;
-        while (j + 1 < n && nums[j+1] > nums[j]) {
+        while (j + 1 < n && nums[j + 1] > nums[j]) {
             j += 1;
         }
-        if (i == j || j == n-1) {
+        if (i == j || j == n - 1) {
             return false;
         }
         i = j;
-        while (j + 1 < n && nums[j+1] < nums[j]) {
+        while (j + 1 < n && nums[j + 1] < nums[j]) {
             j += 1;
         }
-        if (i == j || j == n-1) {
+        if (i == j || j == n - 1) {
             return false;
         }
         i = j;
-        while (j + 1 < n && nums[j+1] > nums[j]) {
+        while (j + 1 < n && nums[j + 1] > nums[j]) {
             j += 1;
         }
-        return j != i && j == n-1;
+        return j != i && j == n - 1;
+    }
+};
+```
+
+**Solution 2: (Counter)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 27.72 MB, Beats 35.38%
+```
+```c++
+class Solution {
+public:
+    bool isTrionic(vector<int>& nums) {
+        int n = nums.size(), i, k;
+        if (nums[0] >= nums[1]) {
+            return false;
+        }
+        k = 1;
+        for (i = 2; i < n; i ++) {
+            if (nums[i - 1] == nums[i]) {
+                return false;
+            }
+            if ((nums[i - 2] - nums[i - 1]) * (nums[i - 1] - nums[i]) < 0) {
+                k += 1;
+            }
+        }
+        return k == 3;
     }
 };
 ```
