--- a/algorithm/LeetCode/[Hard] 3445. Maximum Difference Between Even and Odd Frequency II.md
+++ b/algorithm/LeetCode/[Hard] 3445. Maximum Difference Between Even and Odd Frequency II.md
@@ -51,26 +51,26 @@ The input is generated that at least one substring has a character with an even 
 
 # Submissions
 ---
-**Solution 1: (Prefis Sum, Two Pointers, Brute Force)**
+**Solution 1: (DP Bottom-Up, Two Pointers, Brute Force, try all possible input)**
 
     ------|----k-----|------
           ^l         ^r
    ^^^^^^^^
-    min pre
-         pre_a
-         pre_b
+    min best[pre = cur^0b10]
+          = pre_a - pre_b
    ^^^^^^^^^^^^^^^^^^^
-           cur
-                     cnt_a
-                     cnt_b
+           cur       = cnt_a - cnt_b
 status
-      %2     %2 |
-   cnt_a  cnt_b | min(cnt_a - cnt_b)   
-       0      0 | 
-       0      1 | 
-       1      0 | 
-       1      1 | 
-        ans = max(ans, cur - min pre = cur^0b10)
+        cur^0b10
+           pre       |        cur      
+    pre_a%2 pre_b%2  | cnt_a%2 cnt_b%2    
+          1       0  |       0       0   
+          1       1  |       0       1   
+          0       0  |       1       0   
+          0       1  |       1       1   
+        ans = max(ans, cur - min best[pre = cur^0b10])
+                       ^^^       ^^^^^^^^^^^^^^^^^^^
+                   cnt_a - cnt_b    pre_a - pre_b
 -------------------------------------
 idx        -1 0 1 2 3 4
               1 2 2 3 3, k = 4
@@ -80,35 +80,35 @@ b = 2
     cnt_a     1 
     cnt_b       1 2
     pre_a   0 1
-    pre_b   0         
-    l_sts   0 2      
+    pre_b   0   1     
+    l_sts   0 2 3    
     r_sts     2 3 2 2 2 
               -------
                 -------
     best 0          0
          1
-         2           -1
+         2            1
          3
     ans            -1-1
 -------------------------------------
 idx         -1 0 1 2 3 4 5 6
                1 1 2 2 2 1 1, k = 3
-                       ^l  ^r
-a=1
-b=2
-    cnt_a      1 2       3 4
-    cnt_b          1 2 3
-    pre_a    0 1 2
-    pre_b    0     1 2 3
-    l_sts    0 2 0 1 0 1
-    r_sts      2 0 1 0 1 3 1
-    best 0         0     0
-         1             1-1
-         2           1
+               ^l      ^r
+a = 2
+b = 1
+    cnt_a    0     1 2 3    
+    cnt_b    0 1 2       3 4
+    pre_a    0    
+    pre_b    0 1        
+    l_sts          0        
+    r_sts      1 0 2 0 2 3 2
+    best 0         0      -2
+         1              -1
+         2                -1
          3
-    ans           -1-1 1 1 1
-               -----
-                 ----- 
+    ans                1      
+               ---------
+
 ```
 Runtime: 30 ms, Beats 96.15%
 Memory: 11.48 MB, Beats 98.72%
